@@ -126,3 +126,5 @@ RemoveRegisterGroupAction.label=Remove Register Group
 RemoveRegisterGroupAction.tooltip=Remove Register Group
 EditRegisterGroupAction.label=Edit Register Group
 EditRegisterGroupAction.tooltip=Edit Register Group
+RestoredefaultRegisterGroupsAction.label=Restore Default Register Groups
+RestoredefaultRegisterGroupsAction.tooltip=Restore Default Register Groups
